tests/snapshots/examples_fixtures/type_system__failing__08_compile_identifier_type_mismatch.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/08_compile_identifier_type_mismatch.flx
== compile ==
failed (compile)
== diagnostics ==
error[E300]: Annotation Type Mismatch

The value of `n` does not match its type annotation.

  examples/type_system/failing/08_compile_identifier_type_mismatch.flx:28:14
   |
28 | let n: Int = value
   |              ^^^^^
   |              ----- this value has type `String`

   |        --- but `n` was annotated as `Int`

Note:
  annotated type: Int
  value type: String

Help:
  Change `n` to a `Int` value or update the annotation.
== stdout ==
<not executed>
